--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+spring.datasource.url = jdbc:mysql://54.234.57.19:3306/adventuredb?useSSL=false&serverTimezone=UTC&autoReconnect=true
+spring.datasource.username = root
+spring.datasource.password = password
+spring.jpa.show-sql = true
+spring.jpa.hibernate.ddl-auto = update
+server.port=8085
