--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com</groupId>
-    <artifactId>adventurexp</artifactId>
+    <artifactId>adventurexp_frontend</artifactId>
     <version>1</version>
-    <name>adventurexp</name>
+    <name>adventurexp_frontend</name>
     <description>Demo project for Spring Boot</description>
     <properties>
         <java.version>11</java.version>
